--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,6 @@
 == Кто хочет стать миллионером?!
 
-Игра для детей от 12 до 159 лет.
+Игра для детей от 12 до 159 лет. Test.
 
 Учебное приложение курса по Ruby on Rails от «Хорошего программиста». В продакшене настроено на работу с Heroku.
 
